--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Data Analyst – Driving Business Growth</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Alan Guevara</h1>
+							<p>Data Analyst specialized in driving business growth through data.</p>
 						</div>
 
 					<!-- Nav -->
@@ -61,10 +61,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Alan</strong>, a Data Analyst focused on helping businesses make smarter decisions through data.</h2>
+  								<p>I transform complex data into actionable insights to drive growth and efficiency.</p>
 							</header>
 
 							<footer>
@@ -82,10 +80,8 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here you’ll find a selection of projects where I’ve applied data analysis to solve business challenges, uncover insights, and optimize strategies. 
+							Each example demonstrates my ability to turn data into actionable results.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
