--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Alan Guevara</h1>
-							<p>Data Analyst specialized in driving business growth through data.</p>
+							<p>Helping businesses grow through data.</p>
 						</div>
 
 					<!-- Nav -->
