--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
 
 							<a href="#" class="image featured"><img src="images/banner-bi.png" alt="" style="width: 100%; max-height: 280px; object-fit: cover;" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>	
+								Hi there! I'm really interested in how data can help small businesses grow smarter. 
+								I love digging into numbers to find patterns, map out what's working (and what's not), 
+								and uncover ways to make things run better. My goal is to show that using data doesn't have to be complicated — 
+								it can actually make a big difference when it comes to making everyday decisions and building a stronger business.
+							</p>
 
 						</div>
 					</section>
