--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@
 
 							<a href="#" class="image featured"><img src="images/banner-bi.png" alt="" style="width: 100%; max-height: 280px; object-fit: cover;" /></a>
 
-							<p>	
-								Hi there! I'm really interested in how data can help small businesses grow smarter. 
-								I love digging into numbers to find patterns, map out what's working (and what's not), 
-								and uncover ways to make things run better. My goal is to show that using data doesn't have to be complicated — 
-								it can actually make a big difference when it comes to making everyday decisions and building a stronger business.
+							<p style="margin-left: 0; text-indent: 0;">
+  								Hi there! I'm really interested in how data can help small businesses grow smarter. 
+  								I love digging into numbers to find patterns, map out what's working (and what's not), 
+  								and uncover ways to make things run better. My goal is to show that using data doesn't have to be complicated — 
+  								it can actually make a big difference when it comes to making everyday decisions and building a stronger business.
 							</p>
+
 
 						</div>
 					</section>
