--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/dashboard-gym.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Gym Performance Dashboard – Power BI</h3>
 										</header>
 									</article>
 									<article class="item">
