--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/dashboard-taxi.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Taxi Trip Analytics – Power BI</h3>
 										</header>
 									</article>
 								</div>
