--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 								<p>En esta sección comparto análisis detallados, casos de estudio y guías en formato PDF.</p>
 	  							<ul>
 									<li>
-		  								<h3>🧠 Análisis de comportamiento de clientes</h3>
-		  							<a href="pdfs/comportamiento-clientes.pdf" target="_blank">Ver PDF</a>
+		  								<h3>📊 Del papel al progreso: digitalización de la data</h3>
+		  							<a href="images/del-papel-al-progreso.pdf" target="_blank">Ver PDF</a>
 									</li>
 									<li>
 		  								<h3>📦 Estrategias de stock en E-commerce</h3>
