--- a/index.html
+++ b/index.html
@@ -183,10 +183,8 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>If you're interested in working together, have questions about my projects, or simply want to connect, feel free to reach out. 
+							I'm always open to new opportunities and collaborations in the field of data and analytics.</p>
 
 							<form method="post" action="#">
 								<div class="row">
