--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
 									<h2>Blog</h2>
 	  							</header>
 	  
-								<p>En esta sección comparto análisis detallados, casos de estudio y guías en formato PDF.</p>
+								<p>In this section, I share in-depth analyses, case studies, and guides in PDF format.</p>
 	  							<ul>
 									<li>
-		  								<h3>📊 Del papel al progreso: digitalización de la data</h3>
+		  								<h3>📊 From Paper to Progress: Data Digitalization</h3>
 		  							<a href="images/del-papel-al-progreso.pdf" target="_blank">Ver PDF</a>
 									</li>
 									<li>
-		  								<h3>📦 Estrategias de stock en E-commerce</h3>
+		  								<h3>🏪 Neighborhood Grocery Store Dashboard</h3>
 		  								<a href="pdfs/stock-ecommerce.pdf" target="_blank">Ver PDF</a>
 									</li>
 	  							</ul>
