--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
 							<p>If you're interested in working together, have questions about my projects, or simply want to connect, feel free to reach out. 
 							I'm always open to new opportunities and collaborations in the field of data and analytics.</p>
 
-							<form method="post" action="#">
+							<form action="https://formsubmit.co/alanguedata@gmail.com" method="POST">
+								<input type="hidden" name="_captcha" value="false">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
