--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/logoBI.png" alt="" /></span>
 							<h1 id="title">Alan Guevara</h1>
 							<p>Helping businesses grow through data.</p>
 						</div>
