--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/appsheet.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Grocery app</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -164,7 +164,7 @@
 	  							<ul>
 									<li>
 		  								<h3>📊 From Paper to Progress: Data Digitalization</h3>
-		  							<a href="images/del-papel-al-progreso.pdf" target="_blank">Ver PDF</a>
+		  							<a href="images/paper-progress.pdf" target="_blank">Ver PDF</a>
 									</li>
 									<li>
 		  								<h3>🏪 Neighborhood Grocery Store Dashboard</h3>
