--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
 		  							<a href="images/paper-progress.pdf" target="_blank">Ver PDF</a>
 									</li>
 									<li>
-		  								<h3>🏪 Neighborhood Grocery Store Dashboard</h3>
-		  								<a href="pdfs/stock-ecommerce.pdf" target="_blank">Ver PDF</a>
+		  								<h3>🏪 Digital transformation for small businesses: a real solution with AppSheet</h3>
+		  								<a href="images/digital-transformation.pdf" target="_blank">Ver PDF</a>
 									</li>
 	  							</ul>
 							</div>
