--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/appsheet.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/end-to-end.png" alt="" /></a>
 										<header>
-											<h3>Grocery app</h3>
+											<h3>End to end project</h3>
 										</header>
 									</article>
 									<article class="item">
