--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/electromas-dashboard.png" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Electromás Dashboard</h3>
 										</header>
 									</article>
 								</div>
