--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/penultimo.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Branch analysis</h3>
 										</header>
 									</article>
 									<article class="item">
