--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/alanguev1" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:alanguedata@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -162,11 +162,11 @@
 	  							<ul>
 									<li>
 		  								<h3>📊 From Paper to Progress: Data Digitalization</h3>
-		  							<a href="images/paper-progress.pdf" target="_blank">Ver PDF</a>
+		  							<a href="images/paper-progress.pdf" target="_blank">See PDF</a>
 									</li>
 									<li>
 		  								<h3>🏪 Digital transformation for small businesses: a real solution with AppSheet</h3>
-		  								<a href="images/digital-transformation.pdf" target="_blank">Ver PDF</a>
+		  								<a href="images/digital-transformation.pdf" target="_blank">See PDF</a>
 									</li>
 	  							</ul>
 							</div>
