--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 
 							<form action="https://formsubmit.co/alanguedata@gmail.com" method="POST">
 								<input type="hidden" name="_captcha" value="false">
+								<input type="hidden" name="_next" value="https://alanguev1.github.io/paginita">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
