--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
 							<a href="#" class="image featured"><img src="images/banner-bi.png" alt="" style="width: 100%; max-height: 280px; object-fit: cover;" /></a>
 
 							<p style="margin: 0; padding: 0; text-indent: 0; text-align: left;">
-  								Hi! I'm really interested in how data can help small businesses grow smarter. 
-  								I love digging into numbers to find patterns, map out what's working (and what's not), 
-  								and uncover ways to make things run better. My goal is to show that using data doesn't have to be complicated — 
-  								it can actually make a big difference when it comes to making everyday decisions and building a stronger business.
+  								I’m passionate about helping small businesses thrive through the power of data. 
+  								By exploring numbers and uncovering meaningful insights, I identify what’s driving 
+								success and where improvements can be made.My mission is to make data simple and 
+								approachable — so business owners can confidently use it to make smarter decisions 
+								every day and grow their businesses stronger and more efficiently.
 							</p>
 
 
