--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/logoBI.png" alt="" /></span>
 							<h1 id="title">Alan Guevara</h1>
-							<p>Helping businesses grow through data.</p>
+							<p>Grow with data 🚀</p>
 						</div>
 
 					<!-- Nav -->
@@ -226,3 +226,4 @@
 
 	</body>
 </html>
+
