--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
 		  								<h3>🏪 Digital transformation for small businesses: a real solution with AppSheet</h3>
 		  								<a href="images/digital-transformation.pdf" target="_blank">See PDF</a>
 									</li>
+									<li>
+		  								<h3>🚀 N8N Workflow Order Automation</h3>
+		  								<a href="images/n8n_workflow.pdf" target="_blank">See PDF</a>
+									</li>
 	  							</ul>
 							</div>
   						</section>
@@ -226,4 +230,5 @@
 
 	</body>
 </html>
+
 
